recaptcha alignment bug fix

--- a/www/assets/styles/general.less
+++ b/www/assets/styles/general.less
@@ -410,7 +410,7 @@ input[type=checkbox]{
 }   
 
 #recaptcha_area {
-    margin: 15px 0;
+    margin: 25px 0;
     width:440px;
 }
 
